add loginOrCreateUser
